--- a/1.html
+++ b/1.html
@@ -12,9 +12,33 @@
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>HTML이란 무엇인가?</h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8P82RfzHTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <p><a href="https://www.instagram.com/eunbining0904/" target="_blank" title="eunbin instagram">Hypertext Markup Language (HTML)</a> is the standard markup
   language for <strong>creating <u>web</u> pages</strong> and web applications.</p><p style="margin-top:45px;">2009년 KBS 2TV 대하드라마 천추태후에서 어린 황보설 역으로 출연, MBC 창사48주년 특별기획드라마 선덕여왕에서 김춘추(유승호 분)의 아내 보량 역으로 출연하였다. 같은 해 옛날 옛적에 훠어이 훠이라는 연극에 아내 역으로 출연하였다.
   <img src="13_로고.jpg" width="100%">
   옛날 옛적에 훠어이 훠이는 평안북도에 전해 내려오는 아기장수 설화를 바탕으로 과거 무자비한 권력 아래에서 억압당할 수 밖에 없었던 민중들의 삶 이야기를 각색해 희곡으로 만든 작품이다. 원작의 아내 역이 10대이긴 하지만, 아내의 역할 자체가 굉장히 복잡한 감정을 연기해야 하는 역할이라 이 작품에 어린 연기자가 도전한다는 것이 화제가 되었다.</p>
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-qtz1xowmfu.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
