--- a/1.html
+++ b/1.html
@@ -3,6 +3,15 @@
 <head>
   <title>WEB1 - html</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MHT1B8SZDR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MHT1B8SZDR');
+</script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -39,6 +48,6 @@
     })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-   </p>
+  </p>
 </body>
 </html>
